tests/focus-check/focus-check.exp

Stop any already-running server.
Full check:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ string. This type is incompatible with
  3: var x: number = 3;
            ^^^^^^ number

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ number. This type is incompatible with
  3: var x: string = 123; // Error
            ^^^^^^ string

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast `""` to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 4 errors

Full focus-check:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ string. This type is incompatible with
  3: var x: number = 3;
            ^^^^^^ number

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ number. This type is incompatible with
  3: var x: string = 123; // Error
            ^^^^^^ string

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast `""` to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 4 errors

Focused check on a file with local errors but no dependency or reverse dependency:
Error: test.js:3
  3: ("": number);
      ^^ Cannot cast `""` to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 1 error

Focused check on a file with no local errors but a dependency:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on a file with no local errors but a reverse dependency:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on two files with overlapping errors:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number


Found 1 error

Focused check on multiple files with disjoint sets of errors:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast `""` to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 2 errors

Focused check on a file and a directory:
Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ string. This type is incompatible with
  3: var x: number = 3;
            ^^^^^^ number

Error: test.js:3
  3: ("": number);
      ^^ Cannot cast `""` to number because string [1] is incompatible with number [2].
  References:
    3: ("": number);
        ^^ [1]: string
    3: ("": number);
            ^^^^^^ [2]: number


Found 2 errors

Focused check on files specified in list.txt:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ Cannot cast `require(...)` to number because string [1] is incompatible with number [2].
  References:
    3: (require('./b'): number);
        ^^^^^^^^^^^^^^ [1]: string
    3: (require('./b'): number);
                        ^^^^^^ [2]: number

Error: dir/test2.foo:4
  4: x = 3 + "string";
         ^^^^^^^^^^^^ string. This type is incompatible with
  3: var x: number = 3;
            ^^^^^^ number


Found 2 errors

Focused check guessing root by looking at first file:
Error: other_root/other_root_dependent.js:5
  5: (foo: string); // Error
      ^^^ Cannot cast `foo` to string because number [1] is incompatible with string [2].
  References:
    5: (foo: string); // Error
        ^^^ [1]: number
    5: (foo: string); // Error
             ^^^^^^ [2]: string

Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ number. This type is incompatible with
  3: var x: string = 123; // Error
            ^^^^^^ string


Found 2 errors

Focused check with explicit root:
Error: other_root/other_root_file.js:3
  3: var x: string = 123; // Error
                     ^^^ number. This type is incompatible with
  3: var x: string = 123; // Error
            ^^^^^^ string


Found 1 error

Done!
